# evo

./: CMakeLists.txt
evo/: CMakeLists.txt  DNA.cpp  DNA.h  codon.h  evo.cpp  evo.h
